--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "geist": "^1.3.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
+    "next-i18next": "^15.3.1",
+    "next-intl": "^3.20.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
