--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
+    "@formatjs/intl-localematcher": "^0.5.4",
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
@@ -23,10 +24,9 @@
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
     "geist": "^1.3.0",
+    "negotiator": "^0.6.3",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
-    "next-i18next": "^15.3.1",
-    "next-intl": "^3.20.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "server-only": "^0.0.1",
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
